Bug 328936 - "User action manager"; lost icon
Summary: "User action manager"; lost icon
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7.0
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Davide Gianforte
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2013-12-17 23:01 UTC by Cade
Modified: 2020-08-10 08:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cade 2013-12-17 23:01:16 UTC
User selected icon is lost.

Reproducible: Always

Steps to Reproduce:
1. Open Krusader.
2. Menu "UserActions" -> "Manage user actions".
3. Create menu item "Test 1" with any icon (for example, "X").
4. Create menu item "Test 2" with other icon (for example, "Y").
5. Select item "Test 1".
6. Rename "Title:" "Test 1" on "Test 3" and press button "Apply".
Actual Results:  
Now icon "X" was replaced on icon "Y".

Expected Results:  
Do not replace  icon "X" on icon "Y".
Comment 1 Toni Asensi Esteve 2018-07-17 13:20:41 UTC
Still happens using Krusader 2.7.0.
Comment 2 Dmitry Yasenovsky 2020-06-24 10:51:07 UTC
Still happens using Krusader 2.8.0-dev "Bleeding Edge" (2020-06-23)
Comment 3 Bug Janitor Service 2020-06-30 18:57:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/19
Comment 4 Davide Gianforte 2020-08-10 08:55:10 UTC
Git commit 259fb603014d4abe9629342ff8748c6328334516 by Davide Gianforte.
Committed on 10/08/2020 at 08:54.
Pushed by gengisdave into branch 'master'.

Fix UserAction icons

The button holding the useraction icon is not set when selecting an element,
but only when the icon is changed by the user. The last saved icon is applied
to the following change if its icon is not changed.
Related: bug 423434
FIXED: [ 328936 ] "User action manager"; lost icon
FIXED: [ 423434 ] UserAction icon is lost

M  +1    -1    krusader/ActionMan/actionproperty.cpp

https://invent.kde.org/utilities/krusader/commit/259fb603014d4abe9629342ff8748c6328334516